# RESLAM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GUI/: ImageDisplay.h  ImageRW.h  MinimalImage.h  Output3DWrapper.h
GUI/Pangolin/: KeyFrameDisplay.cpp  PangolinDSOViewer.cpp
IOWrapper/: DataStructures.cpp  DataStructures.h  Input.cpp  Input.h
Pangolin/: KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
Relocaliser/: LoopCloser.cpp  LoopCloser.h  Relocaliser.cpp  Relocaliser.h  ceresloopcloser.cpp  ceresloopcloser.h  types.h
Relocaliser/FernRelocLib/: FernConservatory.cpp  FernConservatory.h  RelocDatabase.cpp  RelocDatabase.h  fernrelocaliser.cpp  fernrelocaliser.h
System/: LocalMapper.cpp  LocalMapper.h  Mapper.cpp  Mapper.h  System.cpp  System.h  SystemSettings.h  Tracker.cpp  Tracker.h  WindowedOptimizer.cpp  WindowedOptimizer.h
Utils/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  CoarseDistanceMap.cpp  CoarseDistanceMap.h  IndexThreadReduce.h  LGSX.h  Logging.cpp  Logging.h  MatrixAccumulators.h  timer.h  utility_functions.h
config/: Defines.h
config_files/: dataset_icl.yaml  dataset_tum1.yaml  dataset_tum2.yaml  dataset_tum3.yaml  reslam_settings.yaml
